# WPU

./: .gitignore  README.ko.md  README.md  pyproject.toml
demos/: robot_cup_demo.py
docs/: claims.ko.md  claims.md  objectification.ko.md  objectification.md  process_unit_release_audit.ko.md  process_unit_release_audit.md  publication_readiness.ko.md  publication_readiness.md  reproducibility.ko.md  reproducibility.md  research_thesis.ko.md  research_thesis.md  world_copy_model.ko.md  world_copy_model.md
scripts/: analyze_b_sweep.py  analyze_candidate_noharm_gate.py  analyze_candidate_oracle_gap.py  analyze_candidate_regret_gate.py  analyze_candidate_safety_frontier.py  analyze_causal_working_set.py  analyze_composition_variant_selector.py  analyze_controlled_stress.py  analyze_diagnostic_variant_selector.py  analyze_joint_candidate_generator.py  analyze_matched_accuracy_speedup.py  analyze_matched_speedup_tolerance.py  analyze_n_sweep.py  analyze_pybullet_branch_prior_shift.py  analyze_pybullet_calibration_cost_frontier.py  analyze_pybullet_correction_trigger_frontier.py  analyze_pybullet_fewshot_adaptation.py  analyze_pybullet_leave_family_out.py  analyze_pybullet_mechanism_adaptive_policy.py  analyze_pybullet_mechanism_prior_adaptation.py  analyze_pybullet_mechanism_selective_calibration_gate.py  analyze_pybullet_objectification_loss_coupling.py  analyze_pybullet_pareto_frontier.py  analyze_pybullet_prior_strength_sweep.py  analyze_pybullet_selected_prior_adaptation.py  analyze_pybullet_shift_detector_policy.py  analyze_pybullet_shift_stress.py  analyze_pybullet_simulator_coverage.py  analyze_pybullet_system_claim_boundary.py  analyze_regret_margin_sweep.py  analyze_shift_calibration_comparison.py  analyze_state_integrity.py  analyze_step_sweep.py  analyze_system_energy_proxy.py  analyze_working_set_selection.py  audit_v2_priority_dashboard.py  causal_working_set_experiment.py  clipped_diagnostic_probe.py  compare_regret_router_variants.py  controlled_stress_suite.py  (+87 more)
tests/: test_core_primitives.py  test_demo_smoke.py  test_dense_engine.py  test_docs_links.py  test_hierarchical_index.py  test_model.py  test_public_api.py  (+8 more)
(+641 files in other folders)
