[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wpu"
version = "0.1.0"
description = "State Is All You Need / World-State Processing Unit research prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "torch>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["wpu*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
