[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wpu"
version = "0.1.0"
description = "State Is All You Need / World-State Processing Unit research prototype"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "numpy>=1.24",
  "torch>=2.2",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
  "matplotlib>=3.8",
  "pytest>=8",
]
sim = [
  "pybullet>=3.2.7",
]

[tool.setuptools.packages.find]
include = ["wpu*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
